# flask-connexion-rest-api-demo

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  db_connection.py  docker-compose.yml  init_db.py  models.py  notes.py  people.db  people.py  pyproject.toml  swagger.yml
