[tool.poetry]
name = "flask-connexion-rest-api-demo"
version = "0.1.0"
description = ""
authors = ["Michael Dreisinger <mike.dreisinger95@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_connexion_rest_api_demo"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
connexion = {extras = ["swagger-ui"], version = "^2.14.2"}
flask-marshmallow = {version = "^0.14.0", extras = ["sqlalchemy"]}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
